--- a/create-autopilot-gke.yml
+++ b/create-autopilot-gke.yml
@@ -3,7 +3,9 @@
   hosts: localhost
   gather_facts: false
   become: true
-
+  vars_files:
+  - ansible.vars.yml
+  
   tasks:
     - name: Install Terraform
       apt:
@@ -16,6 +18,6 @@
         chdir: terraform
 
     - name: Create Cluster
-      command: terraform apply -auto-approve -var="project_id=crewnetics-dev" -var="credential=crewnetics-dev-352099b311f4.json" -var="region_name=us-central1" -var="environment=test" -var="autopilot=true" 
+      command: terraform apply -auto-approve -var="project_id=project_id" -var="credential=credential" -var="region_name=region_name" -var="environment=environment" -var="autopilot=autopilot" 
       args:
         chdir: terraform
