--- a/ansible.vars.yml
+++ b/ansible.vars.yml
@@ -1,5 +1,4 @@
 project_id: crewnetics-dev
 credential: crewnetics-dev-352099b311f4.json
 region_name: us-central1
-environment: test
-autopilot: true
+cluster_name: test
