providing switch for autopilot from ansible

--- a/ansible.vars.yml
+++ b/ansible.vars.yml
@@ -2,3 +2,4 @@ project_id: crewnetics-dev
 credential: crewnetics-dev-352099b311f4.json
 region_name: us-central1
 cluster_name: test
+autopilot: "true"
