--- a/create-autopilot-gke.yml
+++ b/create-autopilot-gke.yml
@@ -18,6 +18,6 @@
         chdir: terraform
 
     - name: Create Cluster
-      command: terraform apply -auto-approve -var="project_id={{ project_id }}" -var="credential={{ credential }}" -var="region_name={{ region_name }}" -var="cluster_name={{ cluster_name }}"
+      command: terraform apply -auto-approve -var="project_id={{ project_id }}" -var="credential={{ credential }}" -var="region_name={{ region_name }}" -var="cluster_name={{ cluster_name }}" -var="autopilot={{ autopilot }}" 
       args:
         chdir: terraform
