jaeger: Installing the Chart using the All in One executable and in-memory storage

--- a/install_istio_jaeger.yml
+++ b/install_istio_jaeger.yml
@@ -50,4 +50,6 @@
         namespace: jaeg
         release_namespace: jaeger
         kubeconfig: '~/.kube/config'
+        values_files:
+          - jaeger.values.yml
 
